--- a/medicine/medicine.html
+++ b/medicine/medicine.html
@@ -15,7 +15,7 @@
 <body>
 
     <header class="header">
-        <h1 class="logo">ফার্ম ডেট</h1>
+        <h1 class="logo">ফার্ম ভেট</h1>
         <div class="search-container">
             <div class="search-input-wrapper">
                 <input type="text" class="search-bar" placeholder="ঔষধ খুঁজুন">
