--- a/dashboard/dashboard.html
+++ b/dashboard/dashboard.html
@@ -7,294 +7,8 @@
     <title>ফার্ম ভেট হোমপেজ</title>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
-    <style>
-        body {
-            font-family: "Baloo Da 2", sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        .top-bar {
-            background-color: #4a148c;
-            color: white;
-            padding: 10px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .logo {
-            font-size: 1.5em;
-            font-weight: 600;
-            margin: 0;
-            flex-shrink: 0;
-        }
-
-        .search-bar-container {
-            position: relative;
-            flex-grow: 1;
-            max-width: 450px;
-            margin: 0 40px;
-        }
-
-        .search-input {
-            width: 100%;
-            padding: 8px 15px 8px 40px;
-            border: none;
-            border-radius: 20px;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
-            font-family: inherit;
-        }
-
-        .search-icon {
-            position: absolute;
-            left: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: #666;
-            font-size: 0.9em;
-        }
-
-        .header-icons {
-            display: flex;
-            gap: 20px;
-            align-items: center;
-            flex-shrink: 0;
-        }
-
-        .notification-icon,
-        .cart-icon {
-            font-size: 1.2em;
-            cursor: pointer;
-            position: relative;
-        }
-
-        .cart-icon span {
-            position: absolute;
-            top: -8px;
-            right: -8px;
-            background-color: #ff5722;
-            color: white;
-            font-size: 0.7em;
-            padding: 2px 5px;
-            border-radius: 50%;
-            line-height: 1;
-        }
-
-        .main-content {
-            padding: 20px 80px;
-        }
-
-        .banner-section {
-            padding: 40px;
-            margin-bottom: 30px;
-            background: linear-gradient(135deg, #fff7e6 0%, #ffebc3 40%, #ffc107 100%);
-            border: none;
-            border-radius: 12px;
-            text-align: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .banner-content h3 {
-            font-size: 2em;
-            font-weight: 700;
-            color: #1b5e20;
-            margin-top: 10px;
-            margin-bottom: 5px;
-        }
-
-        .banner-content p {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 25px;
-        }
-
-        .btn-primary {
-            display: inline-block;
-            background: linear-gradient(180deg, #4caf50 0%, #2e7d32 100%);
-            color: white;
-            padding: 12px 40px;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: 600;
-            transition: all 0.2s;
-            box-shadow: 0 6px 0 0 #1b5e20, 0 4px 6px rgba(0, 0, 0, 0.3);
-            line-height: 1.5;
-        }
-
-        .btn-primary:hover {
-            background: linear-gradient(180deg, #388e3c 0%, #1b5e20 100%);
-            transform: translateY(2px);
-            box-shadow: 0 4px 0 0 #1b5e20, 0 2px 4px rgba(0, 0, 0, 0.3);
-        }
-
-        .services-section {
-            display: flex;
-            justify-content: center;
-            gap: 60px;
-            margin-bottom: 40px;
-        }
-
-        .service-card {
-            background-color: white;
-            padding: 20px;
-            border-radius: 12px;
-            width: 150px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s;
-            cursor: pointer; /* ক্লিক করার জন্য কার্সার পরিবর্তন */
-        }
-
-        .service-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-
-        .service-icon {
-            font-size: 2.5em;
-            color: #4a148c;
-            background-color: #f0ebf8;
-            width: 60px;
-            height: 60px;
-            margin: 0 auto 10px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .service-name {
-            font-weight: 600;
-            color: #4a148c;
-            margin: 0;
-        }
-
-        .listings-section {
-            display: flex;
-            gap: 40px;
-            justify-content: center;
-        }
-
-        .listing-block {
-            flex-basis: 45%;
-            background-color: white;
-            padding: 25px;
-            border-radius: 8px;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-        }
-
-        .listing-block h2 {
-            font-size: 1.5em;
-            font-weight: 600;
-            color: #4a148c;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 10px;
-            margin-top: 0;
-            margin-bottom: 20px;
-        }
-
-        .list-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 0;
-            border-bottom: 1px dotted #ddd;
-        }
-
-        .list-item:last-child {
-            border-bottom: none;
-        }
-
-        .item-details {
-            text-align: left;
-        }
-
-        .item-name {
-            font-weight: 600;
-            margin: 0;
-            font-size: 1.1em;
-            color: #333;
-        }
-
-        .item-info {
-            font-size: 0.9em;
-            color: #777;
-            margin: 3px 0 0 0;
-        }
-
-        .item-action {
-            display: flex;
-            align-items: center;
-            gap: 15px;
-        }
-
-        .price {
-            font-size: 1.2em;
-            font-weight: 700;
-            color: #4a148c;
-        }
-
-        .btn-secondary,
-        .btn-tertiary {
-            padding: 8px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-weight: 500;
-            transition: background-color 0.2s;
-        }
-
-        .btn-secondary {
-            background-color: #8e24aa;
-            color: white;
-        }
-
-        .btn-secondary:hover {
-            background-color: #7b1fa2;
-        }
-
-        .btn-tertiary {
-            background-color: #4caf50;
-            color: white;
-        }
-
-        .btn-tertiary:hover {
-            background-color: #388e3c;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            color: #777;
-            margin-top: 100px;
-            font-size: 14px;
-        }
-
-        @media (max-width: 768px) {
-            .main-content {
-                padding: 10px 20px;
-            }
-
-            .search-bar-container {
-                display: none;
-            }
-
-            .listings-section {
-                flex-direction: column;
-                gap: 20px;
-            }
-
-            .listing-block {
-                flex-basis: 100%;
-            }
-        }
-    </style>
-    </head>
+    <link rel="stylesheet" href="dashboard.css">
+</head>
 
 <body>
     <div class="page-container">
@@ -388,18 +102,8 @@
     <footer>
         © ২০২৫ ফার্ম ভেট। সর্বস্বত্ব সংরক্ষিত।
     </footer>
-    
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            const medicineCard = document.getElementById('medicine-card');
 
-            if (medicineCard) {
-                medicineCard.addEventListener('click', function() {
-                    window.location.href = "../medicine/medicine.html";
-                });
-            }
-        });
-    </script>
-    </body>
+    <script src="dashboard.js"></script>
+</body>
 
 </html>
