--- a/medicine/medicine.html
+++ b/medicine/medicine.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="medicine.css">
+   
 </head>
 
 <body>
-
+    <div class="loader-overlay" id="loaderOverlay">
+        <span class="loading-text">পেজ লোড হচ্ছে...</span> </div>
     <header class="header">
         <h1 class="logo">ফার্ম ভেট</h1>
         <div class="search-container">
@@ -22,13 +24,19 @@
                 <i class="fas fa-search search-icon"></i>
             </div>
         </div>
+        <a href="../cart/cart.html" class="cart-text-button">
+            <i class="fas fa-shopping-cart" style="font-size: 16px;"></i>
+            আপনার কার্ট
+        </a>
         <div class="user-icons">
             <div class="icon-wrapper">
                 <i class="fas fa-bell notification-icon icon"></i>
             </div>
             <div class="icon-wrapper">
-                <i class="fas fa-shopping-cart cart-icon icon"></i>
-                <span class="cart-badge" style="display:none;">0</span>
+                <a href="../cart/cart.html" style="color: inherit;">
+                    <i class="fas fa-shopping-cart cart-icon icon"></i>
+                    <span class="cart-badge" id="cartBadge" style="display:none;">0</span>
+                </a>
             </div>
             <div class="icon-wrapper">
                 <i class="fas fa-user-circle icon"></i>
@@ -136,6 +144,9 @@
     <footer>
         © ২০২৫ ফার্ম ভেট. সর্বস্বত্ব সংরক্ষিত
     </footer>
+
+    
+    <script src="medicine.js"></script>
 </body>
 
 </html>
