--- a/medicine/medicine.html
+++ b/medicine/medicine.html
@@ -8,348 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-    <style>
-        :root {
-            --primary-color: #5d00a1;
-            --action-color: #387b38;
-            --background-light: #f7f7f7;
-            --text-dark: #333;
-            --text-medium: #777;
-            --back-button-bg: #8e24aa; /* Added back button color */
-        }
-
-        .loader-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(255, 255, 255, 0.9);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 1000;
-            transition: opacity 0.3s ease;
-        }
-
-        .loading-text {
-            font-size: 1.5em;
-            font-weight: 700;
-            color: var(--primary-color);
-            padding: 15px 30px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        body {
-            font-family: "Roboto", "Baloo Da 2", Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: var(--background-light);
-            color: var(--text-dark);
-        }
-
-        .header {
-            background-color: var(--primary-color);
-            display: flex;
-            align-items: center;
-            padding: 12px 30px;
-            color: white;
-            justify-content: space-between;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .logo {
-            font-family: "Baloo Da 2", sans-serif;
-            font-size: 24px;
-            font-weight: 700;
-            flex-shrink: 0;
-        }
-
-        .search-container {
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-        }
-
-        .search-input-wrapper {
-            position: relative;
-            width: 100%;
-            max-width: 550px;
-            margin: 0 40px;
-        }
-
-        .search-bar {
-            width: 100%;
-            padding: 10px 45px 10px 15px;
-            border: none;
-            border-radius: 20px;
-            font-size: 16px;
-            background-color: rgba(255, 255, 255, 0.9);
-            color: #333;
-            height: 20px;
-        }
-
-        .search-bar::placeholder {
-            color: var(--text-medium);
-        }
-
-        .search-icon {
-            position: absolute;
-            right: 15px;
-            top: 50%;
-            transform: translateY(-50%);
-            color: var(--primary-color);
-            font-size: 18px;
-        }
-
-        .cart-text-button {
-            display: none; /* Hidden as requested */
-        }
-
-        .user-icons {
-            display: flex;
-            align-items: center;
-            margin-left: auto; /* Aligned to right */
-            gap: 15px;
-            flex-shrink: 0;
-        }
-
-        .icon-wrapper {
-            position: relative;
-        }
-
-        .icon {
-            font-size: 24px;
-            position: relative;
-            cursor: pointer;
-            line-height: 1;
-            color: white;
-        }
-
-        .cart-badge {
-            position: absolute;
-            top: -5px;
-            right: -5px;
-            background-color: #e74c3c;
-            color: white;
-            border-radius: 50%;
-            padding: 2px 6px;
-            font-size: 11px;
-            line-height: 1;
-        }
-
-        /* Back Button Style */
-        .back-button {
-            display: inline-flex;
-            align-items: center;
-            background-color: var(--back-button-bg);
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 6px;
-            font-size: 1em;
-            font-weight: 500;
-            cursor: pointer;
-            text-decoration: none;
-            transition: background-color 0.3s;
-            margin-bottom: 20px;
-        }
-
-        .back-button i {
-            margin-right: 8px;
-        }
-
-        .back-button:hover {
-            background-color: #a346c7;
-        }
-
-        .main-content-wrapper {
-            max-width: 950px;
-            margin: 30px auto;
-            padding: 30px 40px;
-            background-color: white;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-        }
-
-        .main-title {
-            font-size: 28px;
-            font-weight: 500;
-            color: var(--text-dark);
-            margin-bottom: 25px;
-            padding-bottom: 15px;
-            border-bottom: 1px solid #eee;
-        }
-
-        .product-item {
-            border-bottom: 1px solid #eee;
-            padding: 15px 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            transition: background-color 0.1s;
-        }
-
-        .product-list>.product-item:last-child {
-            border-bottom: none;
-        }
-
-        .product-item:hover {
-            background-color: #fcfcfc;
-        }
-
-        .product-details {
-            flex-grow: 1;
-            padding-top: 5px;
-            padding-bottom: 5px;
-        }
-
-        .product-name {
-            font-size: 16px;
-            font-weight: 500;
-            color: var(--text-dark);
-            margin-bottom: 3px;
-        }
-
-        .manufacturer {
-            font-size: 14px;
-            color: var(--text-medium);
-        }
-
-        .product-action {
-            display: flex;
-            align-items: center;
-            min-width: 150px;
-        }
-
-        .price {
-            font-size: 18px;
-            font-weight: 700;
-            color: var(--primary-color);
-            margin-right: 20px;
-            min-width: 60px;
-            text-align: right;
-            direction: ltr;
-        }
-
-        .order-button {
-            background-color: var(--action-color);
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            font-weight: 500;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            width: 120px;
-            text-align: center;
-        }
-
-        .order-button:hover {
-            background-color: #2b612b;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px;
-            color: #777;
-            margin-top: 100px;
-            font-size: 14px;
-        }
-
-        /* mobile response */
-
-        @media (max-width: 768px) {
-            .header {
-                padding: 10px 15px;
-            }
-
-            .logo {
-                font-size: 20px;
-            }
-
-            .search-container {
-                display: none;
-            }
-
-            .cart-text-button {
-                display: none;
-            }
-
-            .user-icons {
-                margin-left: auto;
-                gap: 10px;
-            }
-
-            .icon {
-                font-size: 20px;
-            }
-
-            .main-content-wrapper {
-                margin: 15px;
-                padding: 15px;
-                border-radius: 8px;
-            }
-
-            .back-button {
-                margin-bottom: 15px;
-                width: 100%;
-                justify-content: center;
-            }
-
-            .main-title {
-                font-size: 24px;
-                margin-bottom: 15px;
-                padding-bottom: 10px;
-            }
-
-            .product-item {
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 15px 0;
-            }
-
-            .product-details {
-                width: 100%;
-                margin-bottom: 10px;
-            }
-
-            .product-name {
-                font-size: 18px;
-            }
-
-            .manufacturer {
-                font-size: 13px;
-            }
-
-            .product-action {
-                width: 100%;
-                justify-content: space-between;
-                min-width: auto;
-            }
-
-            .price {
-                font-size: 16px;
-                margin-right: 0;
-                text-align: left;
-                min-width: 50px;
-                padding-top: 5px;
-            }
-
-            .order-button {
-                width: 100px;
-                padding: 8px 15px;
-                font-size: 14px;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="medicine.css">
 </head>
 
 <body>
@@ -479,133 +138,7 @@
         © ২০২৫ ফার্ম ভেট. সর্বস্বত্ব সংরক্ষিত
     </footer>
 
-    <script>
-        // কার্ট ব্যাজ আপডেট ফাংশন
-        function updateCartBadge(count) {
-            const badge = document.getElementById('cartBadge');
-            if (badge) {
-                if (count > 0) {
-                    badge.textContent = count;
-                    badge.style.display = 'block';
-                } else {
-                    badge.textContent = '0';
-                    badge.style.display = 'none';
-                }
-            }
-        }
-
-        // লোডার দেখানোর ফাংশন
-        function showLoaderAndRedirect(url) {
-            const loader = document.getElementById('loaderOverlay');
-            loader.style.opacity = '1';
-            loader.style.display = 'flex';
-
-            setTimeout(() => {
-                window.location.href = url;
-            }, 1500); // 1.5 সেকেন্ড
-        }
-
-        // সার্চ ফাংশন
-        function filterMedicines() {
-            const input = document.getElementById('medicineSearch');
-            const filter = input.value.toUpperCase();
-            const productList = document.getElementById('productList');
-            const items = productList.getElementsByClassName('product-item');
-
-            for (let i = 0; i < items.length; i++) {
-                const nameElement = items[i].querySelector('.product-name');
-                const banglaName = nameElement.textContent.toUpperCase();
-                // ডেটা অ্যাট্রিবিউট থেকে ইংরেজি নাম
-                const englishName = nameElement.getAttribute('data-english-name').toUpperCase();
-
-                // বাংলা নাম বা ইংরেজি নামের সাথে সার্চের মিল খুঁজবে
-                if (banglaName.includes(filter) || englishName.includes(filter)) {
-                    items[i].style.display = "";
-                } else {
-                    items[i].style.display = "none";
-                }
-            }
-        }
-
-
-        window.onload = function () {
-            const loader = document.getElementById('loaderOverlay');
-
-            // পেজ লোড হওয়ার পর লোডার হাইড
-            if (loader) {
-                setTimeout(() => {
-                    loader.style.opacity = '0';
-                    setTimeout(() => {
-                        loader.style.display = 'none';
-                    }, 300);
-                }, 500);
-            }
-
-            // কার্ট আইটেম লোড এবং ব্যাজ আপডেট
-            const initialCart = JSON.parse(localStorage.getItem('userCart')) || [];
-            updateCartBadge(initialCart.length);
-
-            // সার্চ ইনপুট ইভেন্ট লিসেনার
-            document.getElementById('medicineSearch').addEventListener('keyup', filterMedicines);
-
-            // কার্ট আইকনে ক্লিক লিসেনার (১.৫ সেকেন্ড লোডার দেখিয়ে কার্টে যাবে)
-            document.getElementById('cartIconLink').addEventListener('click', (e) => {
-                e.preventDefault(); // ডিফল্ট লিঙ্ক প্রিভেন্ট
-                showLoaderAndRedirect('../cart/cart.html');
-            });
-
-
-            const orderButtons = document.querySelectorAll('.order-button');
-
-            orderButtons.forEach(button => {
-                button.addEventListener('click', (event) => {
-                    const productItem = event.target.closest('.product-item');
-                    if (!productItem) return;
-
-                    const nameElement = productItem.querySelector('.product-name');
-                    const manufacturerElement = productItem.querySelector('.manufacturer');
-                    const priceElement = productItem.querySelector('.price');
-
-                    const productName = nameElement ? nameElement.textContent.trim() : 'Unknown Product';
-                    const productManufacturer = manufacturerElement ? manufacturerElement.textContent.trim() : 'Unknown Manufacturer';
-                    const productPriceText = priceElement ? priceElement.textContent.trim().replace('৳', '').trim() : '0';
-                    const productPrice = parseInt(productPriceText) || 0;
-
-                    const newCartItem = {
-                        type: 'medicine',
-                        name: productName,
-                        info: productManufacturer,
-                        price: productPrice,
-                        quantity: 1
-                    };
-
-                    let cart = JSON.parse(localStorage.getItem('userCart')) || [];
-
-                    const existingItemIndex = cart.findIndex(item =>
-                        item.type === 'medicine' && item.name === productName
-                    );
-
-                    if (existingItemIndex > -1) {
-                        cart[existingItemIndex].quantity += 1;
-                        alert(`${productName} এর পরিমাণ বাড়ানো হয়েছে!`);
-                    } else {
-                        cart.push(newCartItem);
-                        alert(`${productName} কার্টে যোগ করা হয়েছে!`);
-                    }
-
-                    localStorage.setItem('userCart', JSON.stringify(cart));
-                    updateCartBadge(cart.length);
-
-                    // এখানে পরিবর্তন: সরাসরি কার্টে না গিয়ে শুধু অ্যালার্ট দেখাবে।
-                    // যদি কার্ট পেজে যেতে চান, নিচের লাইনটি Uncomment করুন:
-                    // window.location.href = '../cart/cart.html'; 
-                });
-            });
-        };
-
-        // এই ফাইলটি সম্ভবত আপনার কাছে নেই, তাই বাদ দেওয়া হয়েছে:
-        // <script src="medicine.js"></script> 
-    </script>
+   <script src="medicine.js"></script>
 </body>
 
 </html>
